# datastructures-algorithms

./: .gitignore  README.md  pyproject.toml
datastructures_algorithms/strings/introduction/: convert_string.py  encode_message.py  remove_vowels.py  rotate_string.py  valid_parentheses.py
datastructures_algorithms/strings/mixed_problems/: anagram_difference.py  largest_substring.py
leetcode75/: leet75.md
leetcode75/arrya_string/: 1071_greatest_common_divisor_of_strings.py  1768_merge_strings_alternately.py
ninjacode/dsa/10_heaps/: 10_1_heaps.md  10_2_structure.md  10_3_declarations.md  10_4_applications.md
ninjacode/dsa/11_hashmap_set/: 11_1_hashing.md  11_2_hashmap.md  11_3_sets.md  11_4_bounds_set.md
ninjacode/dsa/12_graphs/: 12_1_graphs.md  12_2_representation.md  12_3_traversal.md  12_4_dijkestra.md  12_5_topological_sort.md  12_6_application.md
ninjacode/dsa/13_bit/: 13_1_bit_manipulation.md  13_2_operation.md  13_3_tips.md
ninjacode/dsa/1_introduction/: 1_1_introduction_to_ds.md  1_2_operations_linear_ds.md  1_3_non_linear_ds.md  1_4_right_ds.md  1_5_guided_path.md
ninjacode/dsa/2_arrays/: 2_1_arrays.md  2_2_static_dynamic_array.md  2_3_complexity.md  2_4_array_traversal.md  2_5_arrays_examples.md
ninjacode/dsa/3_strings/: 3_1_strings.md  3_2_operations.md  3_3_properties.md
ninjacode/dsa/4_linkedlist/: 4_1_linkedlist.md  4_2_components.md  4_3_types.md  4_4_operations.md  4_5_applications.md
python/exception_handling/: introduction.md
python/introduction_to_python/: introduction.md
python/operators/: introduction.md
(+75 files in other folders)
