[tool.poetry]
name = "datastructures-algorithms"
version = "0.1.0"
description = ""
authors = ["Arya <aryamishra.in@gmail.com>"]
readme = "README.md"
packages = [{include = "datastructures_algorithms"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
